objects/ccrz__E_InvoiceItem__c.object
<CustomObject>
    <description>Represents invoice detail and reference to other objects.  The invoice item should be a running record of the invoice.  The initial set of data will be the initial detail of the invoice.</description>
    <fields>
        <fullName>CC_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Subscription</label>
        <referenceTo>ccrz__E_Subscription__c</referenceTo>
        <relationshipLabel>CC Invoice Items</relationshipLabel>
        <relationshipName>CC_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dn_Price__c</fullName>
        <label>Dn Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <formula>ccrz__CCOrderItem__r.Group_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCredited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCredited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GOMS_Part_Defined__c</fullName>
        <formula>IF(ccrz__CCOrderItem__r.ccrz__Product__r.GOMS_Part_Number__c!=Null, true, false)</formula>
        <label>Is GOMS Part Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Refund_Intercompany_Call_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Refund Intercompany Call Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_Bypass_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To bypass process builder</description>
        <label>OSM Bypass Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_OrderItem_Vertex_for_BMS_po__c</fullName>
        <formula>ccrz__CCOrderItem__r.Vertex_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrderItem Vertex for BMS po</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>This is the net quantity for subscriptions</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vertex_Tax__c</fullName>
        <label>Vertex Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__CCOrderItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specific order item to which this invoice applies (optional)</description>
        <label>CC Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>CC Invoice Items</relationshipLabel>
        <relationshipName>CCInvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CCOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order to which this invoice item applies (optional)</description>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>CC Invoice Items</relationshipLabel>
        <relationshipName>CCInvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Comments__c</fullName>
        <description>Comments about this line item.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__InvoiceItemId__c</fullName>
        <description>External identifier.</description>
        <externalId>true</externalId>
        <label>Invoice Item Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Invoice__c</fullName>
        <description>The invoice this item is a child of</description>
        <label>Invoice</label>
        <referenceTo>ccrz__E_Invoice__c</referenceTo>
        <relationshipLabel>CC Invoice Items</relationshipLabel>
        <relationshipName>InvoiceItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__OriginalAmount__c</fullName>
        <description>The original amount of the invoice item. Once set this should not be changed. Could be negative or positive.</description>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Display order sequence for the item.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Status__c</fullName>
        <description>E.g. Open, Closed.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Type__c</fullName>
        <description>E.g. Detail, Comment, Payment.</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Tracking_Number__c</fullName>
        <label>dbu Tracking Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRenew</label>
        <type>Checkbox</type>
    </fields>
    <label>CC Invoice Item</label>
    <nameField>
        <displayFormat>II-{0000000000}</displayFormat>
        <label>CC Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>